--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
             <img src="images/jhankar.png" alt="">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="hw">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="hw">
+            <h1>Dream Big</h1>
+            <h2>Become a web Developer</h2>
+            <p>If you’re a fan of the Disney franchise, then you’ll love these memorable quotes from the Pirates of the Caribbean. And when you need a break from adventure on the high seas, check out our pages filled with quotes from other maritime Disney classics like Finding Nemo, The Little Mermaid, and Moana.</p>
+            <a class="link-button" target="blank" href="">DOWNLOAD RESUME</a>
+        </div>
+    </section>
     
     
 </body>
