--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="tb">
+    <section class="tb flex-con">
         <div class="hw">
             <h1>Wellcome to</h1>
         <h1><span class="org">Atish Barua's</span>  World</h1>
@@ -23,7 +23,7 @@
             <img src="images/jhankar.png" alt="">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flex-con">
         <div class="hw">
             <img src="images/jhankar2.png" alt="">
         </div>
@@ -34,6 +34,27 @@
             <a class="link-button" target="blank" href="">DOWNLOAD RESUME</a>
         </div>
     </section>
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div class="flex-con">
+            <div id="full-stack-exp" class="experience-item">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="org">2021-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div id="web-dev-exprience" class="experience-item">
+                <h2 >Baby Web Developer</h2>
+                <h3 class="org">2020-2021 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+        </div>
+
+    </section>
+    <footer>
+        <p>
+            © Peter Parker 2021, a Programming Hero initiative.
+        </p>
+    </footer>
     
     
 </body>
